# DOGEngine

./: .gitignore  Build.sh  CMakeLists.txt  DOGEngine.sln  vcpkg.json
.github/workflows/: ci.yml
DOGEngine/: DOGEngine.cpp  DOGEngine.vcxproj  DOGEngine.vcxproj.filters
DOGEngine/Client/: CMakeLists.txt
DOGEngine/Core/: CMakeLists.txt  GameEntity.cpp  GameEntity.h  GameEntity.inl  GamePlayer.cpp  GamePlayer.h  Logger.cpp  Logger.h  Logger.inl  MenuManager.cpp  MenuManager.h  Renderer.cpp  Renderer.h
DOGEngine/Core/Components/: DamageComponent.cpp  DamageComponent.h  HealthComponent.cpp  HealthComponent.h
DOGEngine/Core/Shaders/: fragment_shader_crt.glsl  fragment_shader_doom.glsl  fragment_shader_lcd.glsl  fragment_shader_n64.glsl  fragment_shader_vhs.glsl  vertex_shader_lcd.glsl  vertex_shader_n64.glsl  vertex_shader_ps1.glsl
DOGEngine/Editor/: BuildSystem.cpp  BuildSystem.h  BuildSystem.unix.cpp  BuildSystem.windows.cpp  CMakeLists.txt
DOGEngine/Portal2D/: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Entity.cpp  Entity.h  Renderer.cpp  Renderer.h  Room.h  RoomBuilder.h  Wall.h
DOGEngine/Server/: CMakeLists.txt
Tools/Windows/: SetupButler.ps1
